fixed alignment issue

--- a/static/css/start.css
+++ b/static/css/start.css
@@ -412,7 +412,6 @@ main {
 .container-main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
